<?xml version="1.0"?>
<package format="3">
  <name>raw_pcl_recorder</name>
  <version>0.0.0</version>
  <description>The raw pcl_recorder package</description>
  <maintainer email="gemb.kaljavesi@tum.de">Gemb Kaljavesi aka TUMGEKA</maintainer>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>

  <!-- ROS 2 DEPENDENCIES-->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>carla_ros_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
